# Saturnus_Magister

./: .env.example  .gitignore  Makefile  README.md  SETUP_GUIDE.md  SIMULATION.md  pyproject.toml  requirements.txt
docker/: Dockerfile  README.md  docker-compose.yml
scripts/: README.md  migrate_to_cloud.py  run_ab_test.py  simulate_full_run.py  ticktick_oauth.py
src/: README.md  __init__.py  config.py  main.py
src/ai/: README.md  __init__.py  ab_testing.py  classifier.py  job_matcher.py  reply_generator.py
src/cli/: README.md  review.py  search.py  setup.py
src/clients/: README.md  __init__.py  gcal.py  gmail.py  ticktick.py
src/db/: README.md  __init__.py  models.py  repository.py
src/db/migrations/: 001_initial.sql  002_add_countdown.sql
src/services/: README.md  __init__.py  email_processor.py  job_linker.py  task_router.py
tests/: README.md  conftest.py  test_classifier.py  test_classifier_mock.py  test_matcher.py  test_matcher_logic.py  test_router.py  test_router_logic.py
